samples/_failures_safe/1761002263_90dfbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6fef3f4.c: In function ‘main’:
./samples/SAFE/__tmp_f6fef3f4.c:160:17: error: expected expression at end of input
  160 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_f6fef3f4.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6fef3f4.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6fef3f4.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6fef3f4.c:160:17: error: expected declaration or statement at end of input
